bk_ida/gccida/g0/add_equal_note
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/add_equal_note/src/optabs.c:595:43: error: must use 'enum' tag to refer to type 'rtx_code'
int  add_equal_note( rtx seq, rtx target, rtx_code code, rtx op0, rtx op1) 
                                          ^
                                          enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/add_equal_note/src/optabs.c:617:13: error: expected identifier or '('
 struct set = v5; 
            ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/add_equal_note/src/optabs.c:636:31: error: use of undeclared identifier 'machine_mode'
note = gen_rtx_fmt_e( code, ( machine_mode)*( ( unsigned __int8 *)target + 2), v7); 
                              ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/add_equal_note/src/optabs.c:642:32: error: use of undeclared identifier 'machine_mode'
note = gen_rtx_fmt_ee( code, ( machine_mode)*( ( unsigned __int8 *)target + 2), v9, v8); 
                               ^
4 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/add_equal_note/src/obj/optabs.o] Error 1
